major improvements in the UI

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 				<h2>Something Began</h2>
 				<h2>We are Back again</h2>
 				<h2>This September</h2>
-				<h2>Effervescence</h2>
+				<h2>Effervescence 17</h2>
+				<h2>We are on our way. Hold tight.</h2>
 				<!-- <h2>Aditya Dewan<br>12345</h2> -->
-				<!-- <h2>Effe is Coming. Hold tight.</h2> -->
 
 				<!-- <h2>This September</h2> -->
 				<!-- <h2>We are back</h2> -->
@@ -830,9 +830,9 @@
            height="77.901596"
            x="759.54053"
            y="415.73804"
-           style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:109.52145953px;line-height:123%;font-family:'Stencil Std';-inkscape-font-specification:'Stencil Std, Bold';text-anchor:start;text-align:start;writing-mode:lr;" /></flowRegion><flowPara
+           style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:29.52145953px;line-height:123%;font-family:'Stencil Std';-inkscape-font-specification:'Stencil Std, Bold';text-anchor:start;text-align:start;writing-mode:lr;" /></flowRegion><flowPara
          id="flowPara4512"
-         style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:109.52145953px;line-height:123%;font-family:'Stencil Std';-inkscape-font-specification:'Stencil Std, Bold';text-align:start;writing-mode:lr;text-anchor:start;">Effe</flowPara></flowRoot></g></svg>
+         style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:29.52145953px;line-height:123%;font-family:'Stencil Std';-inkscape-font-specification:'Stencil Std, Bold';text-align:start;writing-mode:lr;text-anchor:start;">Effe</flowPara></flowRoot></g></svg>
 		<!-- /container -->
 		<!-- <div class = "faer specialtext">
    <svg style="position:relative" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 750 200" preserveAspectRatio="xMidYMid meet" style="height:70%;width:70%">
@@ -912,10 +912,15 @@ jQuery(function($) {
     setSkrollr($('.os-phrases h2:nth-child(6) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
     	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
     setSkrollr($('.os-phrases h2:nth-child(7) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
+    	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 14px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
+    setSkrollr($('.os-phrases h2:nth-child(8) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
     	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
+    setSkrollr($('.os-phrases h2:nth-child(9) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
+    	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
+
     setSkrollr($('#train'), [[0, 'left:-100%;opacity:0;'], [1500, 'left:-100%;opacity:0;'],[6000, 'left:-100%;opacity:0;'],[6700, 'left:10%;opacity:1;']]);
     setSkrollr($('#effe-L'), [[0, 'left:50%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'], [4500, 'width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'],[6500, 'width:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);'],[6700, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);']]);
-    setSkrollr($('#benny'), [[0, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[3000, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [3500, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.7;'],[4000, 'width:50%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.8'],[5000, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);opacity:0;']]);
+    setSkrollr($('#benny'), [[0, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[3000, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;background-size:cover'], [3500, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.7;background-size:cover'],[4000, 'width:50%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.8'],[5000, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);opacity:0;']]);
     setSkrollr($('#benny2'), [[0, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [3000, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [4000, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(-50%);opacity:0.7;'],[4000, 'width:50%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0.8'],[4500, 'width:100%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0;']]);
 
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
