--- a/index.html
+++ b/index.html
@@ -64,17 +64,7 @@
 <div id="benny" ></div>
 <div id="benny2"></div>
 <div id="clouds"></div>
-<div id="trees">
-<div id="tree-1"></div>
-<div id="tree-2"></div>
-<div id="tree-3"></div>
-<div id="tree-4"></div>
-<div id="tree-5"></div>
-<div id="tree-6"></div>
-<div id="tree-7"></div>
-<div id="tree-8"></div>
-<div id="tree-9"></div>
-</div>
+
 <div id="call-1">
 
 </div>
@@ -925,6 +915,7 @@ jQuery(function($) {
     setSkrollr($('#benny'), [[0, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[3000, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;background-size:cover'], [3500, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.7;background-size:cover'],[4000, 'width:50%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.8'],[5000, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);opacity:0;']]);
     setSkrollr($('#benny2'), [[0, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [3000, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [4000, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(-50%);opacity:0.7;'],[4000, 'width:50%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0.8'],[4500, 'width:100%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0;']]);
 
+    // setSkrollr($('body'), [[0, 'background:black;'], [6500, 'background:white;'],[6700, 'background:white;']]);
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
     setSkrollr($('#tree-1'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-2'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
