Heading content changed

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   		<div class="container" id="fix">	
 			<div class="os-phrases" id="os-phrases">
 				<h2>Let's go for a scroll?</h2>
-				<h2>16 Years ago</h2>
-				<h2>Something Began</h2>
-				<h2>We are Back again</h2>
-				<h2>This September</h2>
+				<h2>13 years ago a journey began</h2>
+				<h2>It has been a  wild ride </h2>
+				<h2>We're back</h2>
+				<h2>This October</h2>
 				<h2>Effervescence 17</h2>
 				<h2>We are on our way. Hold tight.</h2>
 				<!-- <h2>Aditya Dewan<br>12345</h2> -->
