--- a/index.html
+++ b/index.html
@@ -62,19 +62,7 @@
 </head>
 
 <body>
-<div id="modal-button">
-  <a id="demo01" href="#animatedModal">DEMO01</a>
-</div>
- <div id="modal-data">
-            <!--"THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID-->
-            <div  id="btn-close-modal" class="close-modal-data"> 
-                CLOSE MODAL
-            </div>
-            
-            <div class="modal-content">
-                <!--Your modal content goes here-->
-            </div>
-  </div>
+
 <div id="effe-L" class="cntered"></div>
 <div id="benny" ></div>
 <div id="benny2"></div>
@@ -103,6 +91,26 @@
 				<!-- <h2>We are back</h2> -->
 				<!-- <h2>For the best 3 days of your life</h2> -->
 			</div>
+      <div id="modal-button">
+  <a id="demo01" href="#animatedModal">DEMO01</a>
+</div>
+ <div id="animatedModal">
+            <!--"THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID-->
+            <div  id="btn-close-modal" class="close-animatedModal"> 
+                CLOSE MODAL
+            </div>
+            
+            <div class="modal-content">
+                Heading on to associate with us? At Effervescence we believe to serve the purpose, and to deliver more than the expectations. We make sure that we carry on the legacy of trust and promise put on us by our partners and sponsors. Let’s see a glimpse of what we provide: 
+                <ol>
+
+(1) Deliverables as per requirement? Yes!
+(2) Budget-friendly deals? Of course!
+(3) Regular updates about the events and festival? Definitely!
+(4) Fluffy unicorns? Nope.(We’re extremely sorry for that.)
+</ol>
+            </div>
+  </div>
 		</div>
 
    <!-- <embed src="train.svg" width="100%"></embed> -->
@@ -943,7 +951,7 @@ jQuery(function($) {
     setSkrollr($('#tree-7'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-8'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-9'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
-    setSkrollr($('#modal-data'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#modal-button'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
 
 
 
@@ -954,25 +962,11 @@ jQuery(function($) {
           window.location='mobile/index.html';
       }
 });
-$("#modal").animatedModal({
-                modalTarget:'modal-data',
-                animatedIn:'lightSpeedIn',
-                animatedOut:'bounceOutDown',
-                color:'#3498db',
-                // Callbacks
-                beforeOpen: function() {
-                    console.log("The animation was called");
-                },           
-                afterOpen: function() {
-                    console.log("The animation is completed");
-                }, 
-                beforeClose: function() {
-                    console.log("The animation was called");
-                }, 
-                afterClose: function() {
-                    console.log("The animation is completed");
-                }
-            });
+$("#demo01").animatedModal( {
+  animatedIn:'lightSpeedIn'
+}
+  );
+
 
 </script>
 
