--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html >
 <head>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="http://use.fontawesome.com/6c299f74e9.js"></script>
 
 <style>
@@ -115,7 +117,12 @@
                 </ol>
                 <p>So what are you waiting for? Scroll down to see what makes associating with us a worthwhile option!</p>
                 <p>
-                <i class="fa fa-phone" aria-hidden="true"></i>
+                <div class="contacts">
+                  <i class="fa extra fa-phone fa-4x" aria-hidden="true"></i>
+                Aditya Dewan <br>Mudit Rathore <br>Anurag Bharadwaj
+                </div>
+                
+
                 </p>
             </div>
             </div>
