--- a/index.html
+++ b/index.html
@@ -89,15 +89,19 @@
 				<h2>This October</h2>
 				<h2>Effervescence 17</h2>
 				<h2>We are on our way. Hold tight.</h2>
+          <div id="modal-button">
+  <a id="demo01" href="#animatedModal">Sponsor Us</a>
+</div>
+  <div id="CA">
+  <a id="demo01" href="#animatedModal">Campus Ambassador</a>
+  </div>
 				<!-- <h2>Aditya Dewan<br>12345</h2> -->
 
 				<!-- <h2>This September</h2> -->
 				<!-- <h2>We are back</h2> -->
 				<!-- <h2>For the best 3 days of your life</h2> -->
 			</div>
-      <div id="modal-button">
-  <a id="demo01" href="#animatedModal">DEMO01</a>
-</div>
+    
  <div id="animatedModal">
             <!--"THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID-->
             <div  id="btn-close-modal" class="close-animatedModal"> 
@@ -126,7 +130,6 @@
                     </ol>
                     <br>
                     <p>So what are you waiting for? Scroll down to see what makes associating with us a worthwhile option!</p>
-                    <p>
                     <br>
                   </div>
                 </div>
@@ -1002,6 +1005,8 @@ jQuery(function($) {
     setSkrollr($('#tree-8'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-9'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#modal-button'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#CA'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+
 
 
 
