Velocity js added

--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,25 @@ jQuery(function($) {
 $("#demo01").animatedModal( {
   animatedIn:'lightSpeedIn',
   animatedOut: 'zoomOutLeft', 
-  color :'#000000'
+  color :'#000000',
+  beforeOpen: function() {
+
+            var children = $(".thumb");
+            var index = 0;
+
+            function addClassNextChild() {
+                if (index == children.length) return;
+                children.eq(index++).show().velocity("transition.expandIn", { opacity:1, stagger: 250 });
+                window.setTimeout(addClassNextChild, 200);
+            }
+
+            addClassNextChild();
+
+        },
+        afterClose: function() {
+          $(".thumb").hide();
+              
+        }
 }
   );
 
