Pointer changed for brochure

--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
                       Aditya Dewan <br>Mudit Rathore <br>Anurag Bharadwaj
                   </div>
                   <div class="col-lg-1">
-                    <i class="fa fa-download fa-4x" aria-hidden="true" style="color:grey"></i>
+                    <span class="brochure"> <i class="fa fa-download fa-4x" aria-hidden="true" style="color:grey"></i></span>
                   </div>
                   <div class="col-lg-3 no-gutters thumb">
-                  Download <br>  Brochure
+                  <span class="brochure" >Download <br>  Brochure</span>
                   </div>
                   <div class="col-lg-1  no-gutters ">
-                  <i class="fa fa-gg fa-3x" style="color:#e60000" aria-hidden="true"></i>
+                  <span class="previous-sponsor"> <i class="fa fa-gg fa-3x" style="color:#e60000" aria-hidden="true"></i></span>
                   </div>
                   <div class="col-lg-2 no-gutters thumb">
-                  Previous <br>sponsors
+                  <span class="previous-sponsor"> Previous <br>sponsors</span>
                   </div>
                 </div>
               </div>
