Link for previous sponsors made functional

--- a/index.html
+++ b/index.html
@@ -1019,6 +1019,11 @@ jQuery(function($) {
 
 
     setSkrollr($('#trees'), [[0, ''], [6600, 'animation:dont 1s linear'],[6700, 'animation:travel 5s linear infinite;']]);
+    $('.previous-sponsor').on('click', function() {
+      window.open('https://effe.org.in','_blank');
+      
+
+    });
     var s = skrollr.init();
       if (s.isMobile()) {
           window.location='mobile/index.html';
