Link for brochure made functional

--- a/index.html
+++ b/index.html
@@ -1020,9 +1020,9 @@ jQuery(function($) {
 
     setSkrollr($('#trees'), [[0, ''], [6600, 'animation:dont 1s linear'],[6700, 'animation:travel 5s linear infinite;']]);
     $('.previous-sponsor').on('click', function() {
-      window.open('https://effe.org.in','_blank');
-      
-
+      window.open('https://effe.org.in','_blank');});
+    $('.brochure').on('click', function() {
+      window.open('Effervescence_17.pdf','_blank');
     });
     var s = skrollr.init();
       if (s.isMobile()) {
