--- a/index.html
+++ b/index.html
@@ -999,9 +999,9 @@ jQuery(function($) {
     setSkrollr($('#train'), [[0, 'left:-100%;opacity:0;'], [1500, 'left:-100%;opacity:0;'],[6000, 'left:-100%;opacity:0;'],[6700, 'left:10%;opacity:1;']]);
     setSkrollr($('#effe-L'), [[0, 'left:50%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'], [4500, 'width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'],[6500, 'width:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);'],[6700, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);']]);
 
-    setSkrollr($('#benny'), [[0, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[3000, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;background-size:cover'], [3500, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.7;background-size:cover'],[4000, 'width:50%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.8'],[5000, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);opacity:0;']]);
+    setSkrollr($('#benny'), [[0, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[3000, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;background-size:cover'], [3500, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.7;background-size:cover'],[4000, 'width:50%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.8'],[5000, 'width:100%;-webkit-transform:translateX(-20%);transform:translateX(-20%);opacity:0;']]);
     setSkrollr($('#benny2'), [[0, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [3000, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [4000, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(-50%);opacity:0.7;'],[4000, 'width:50%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0.8'],[4500, 'width:100%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0;']]);
-        setSkrollr($('#benny3'), [[0, 'left:0%;width:100%;height:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[2000, 'left:0%;width:100%;height:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;background-size:cover'], [2700, 'width:100%;height:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.2;background-size:cover'],[3000, 'width:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.4'],[4000, 'width:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;']]);
+        setSkrollr($('#benny3'), [[0, 'left:0%;width:100%;height:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[2000, 'left:0%;width:100%;height:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;background-size:cover'], [2700, 'width:100%;height:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.2;background-size:cover'],[3000, 'width:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.4    '],[4000, 'width:100%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;']]);
 
     // setSkrollr($('body'), [[0, 'background:black;'], [6500, 'background:white;'],[6700, 'background:white;']]);
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
@@ -1029,7 +1029,16 @@ jQuery(function($) {
     });
     var s = skrollr.init();
       if (s.isMobile()) {
-          window.location='mobile/index.html';
+          if (navigator.userAgent.match(/(iPod|iPhone|iPad|Android)/)) {           
+            window.scrollTo(0,2000) // first value for left offset, second value for top offset
+}else{
+            $('html,body').animate({
+                scrollTop: 100,
+                scrollLeft: 0
+            }, 800, function(){
+                $('html,body').clearQueue();
+            });
+}
       }
 });
 $("#demo01").animatedModal( {
