--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 	<title>Effervescence 17 | Mobile</title>
-    <script src="../js/jquery.js"></script>
-
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
 <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="http://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 <script src="http://use.fontawesome.com/6c299f74e9.js"></script>
@@ -213,10 +211,10 @@ hr{
                     </p>
                     <br>
                     <ol>
-                      <li> Deliverables as per requirement? Yes!
-                      <li> Budget-friendly deals? Of course!
-                      <li> Regular updates about the events and festival? Definitely!
-                      <li> Fluffy unicorns?&#x1f984 Nope &#x1F601(We’re extremely sorry for that.)
+                      <li> Deliverables as per requirement? Yes!</li>
+                      <li> Budget-friendly deals? Of course!</li>
+                      <li> Regular updates about the events and festival? Definitely!</li>
+                      <li> Fluffy unicorns?&#x1f984 Nope &#x1F601(We’re extremely sorry for that.)</li>
                     </ol>
                     <br>
                     <p>So what are you waiting for? Scroll down to see what makes associating with us a worthwhile option!</p>
@@ -248,14 +246,21 @@ hr{
                   </div>
                   </div>
                 </div>
-              </div>
+              </div></div></div></body>
 </body>
+<script src="../js/jquery.js"></script>
+
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="../js/skrollr.js"></script>
  <script src="../js/velocity.js"></script>
 
         <script src="../js/animatedModal.js"></script>  
 <script>
-
+$('.previous-sponsor').on('click', function() {
+      window.open('https://effe.org.in','_blank');});
+    $('.brochure').on('click', function() {
+      window.open('../Effervescence_17.pdf','_blank');
+    });
 $("#demo01").animatedModal( {
   animatedIn:'lightSpeedIn',
   animatedOut: 'zoomOutLeft', 
