--- a/mobile/index.html
+++ b/mobile/index.html
@@ -7,6 +7,12 @@
       <link id = "mainCss" rel="stylesheet" href="../css/animate.min.css">
 
       <script src="http://use.fontawesome.com/6c299f74e9.js"></script>
+      <script src="../js/pace.js"></script>
+      <link id = "mainCss" rel="stylesheet" href="../css/pace.css">
+
+      <script src="http://use.fontawesome.com/6c299f74e9.js"></script>
+
+
       <style>
          @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:700);
          html,body,#content{height:100vh;overflow:hidden;}
@@ -263,7 +269,6 @@
    </body>
    <script src="../js/jquery.js"></script>
    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-   <script src="../js/skrollr.js"></script>
    <script src="../js/velocity.js"></script>
    <script src="../js/animatedModal.js"></script>  
    <script>
