--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html >
 <head>
-<script src="js/pace.js"></script>
+  <script src='js/jquery.js'></script>
+<script src="./js/pace.js"></script>
+      <link  rel="stylesheet" href="./css/pace.css">
+      <script>pace.start()</script>
 <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="http://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 <script src="http://use.fontawesome.com/6c299f74e9.js"></script>
@@ -96,6 +99,7 @@
 		<meta name="description" content="Text Opening Sequence with CSS Animations" />
 
   
+
 
       <link id = "mainCss" rel="stylesheet" href="css/style.css">
       <link id = "mainCss" rel="stylesheet" href="css/animate.min.css">
@@ -986,7 +990,6 @@
                <text class="t8" id="text" x="430" y="150" text-anchor="middle" fill="#fff">s</text>
        -->
 
-  <script src='js/jquery.js'></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script src='js/lettering.js'></script>
